# alphaHome

./: .coverage  .gitignore  AI_Task_20240516_100817.md  AI_Task_Calendar_20240516_103000.md  BATCH_PLANNER_MIGRATION.md  BATCH_UTILS_IMPORT_FIX_SUMMARY.md  Bugfix_MacroTasks_May22.md  DEPENDENCY_CLEANUP_SUMMARY.md  Fix_Tushare_Index_Swmember_Update_Task.md  GUI_重构总结.md  IMPLEMENTATION_SUMMARY.md  IMPORT_STANDARDIZATION_SUMMARY.md  LICENSE  Makefile  OptimizeTimestampQuery.md  RAWDATA_IMPLEMENTATION_REPORT.md  README.md  Refactor_Calendar_Py_To_Use_DB_Task.md  SCHEMA_MIGRATION_README.md  TushareTaskRefactoring.md  UpdateReadmeTask.md  backtesting_implementation_task.md  config.example.json  config.py  debug_4k_display.py  design_plan.md  enrich_templates_task.md  git_commit_message.txt  git_commit_message_current.txt  gui_progress_fix_task.md  industry_crowd_factor.py  migrate_schemas.py  package-lock.json  performance_analysis_report.md  phoenix_project_task.md  pyproject.toml  pytest.ini  python_lines_report.txt  requirements.txt  run.py  (+14 more)
.sisyphus/: boulder.json
alphaHome.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
alphahome/: __init__.py  fund_backtest.py
alphahome.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
archive/: README.md  README_PIT_ARCHIVE.md
data/: backtest_results.csv
data_module/: __init__.py  base_task.py  config.example.json  config.json  data_checker.py  db_manager.py  factory.py  task.py  task_decorator.py  task_factory.py  task_manager.py
docs/: CHANGELOG.md  CLI_IMPLEMENTATION_SUMMARY.md  CLI_USAGE_GUIDE.md  PHASE1_COMPLETION_REPORT.md  PHASE2_COMPLETION_REPORT.md  PHASE3_COMPLETION_REPORT.md  PHASE4_COMPLETION_REPORT.md  README.md  SUMMARY.md  TDD_GUIDE.md  akshare_stock_basic_usage.md  architecture.md  architecture_visualization.md  backtest_framework_design.md  batch_planner_migration_guide.md  batch_processing_architecture_roadmap.md  batch_processing_performance_guide.md  derivative_task_implementation_plan.md  developer_guide.md  extended_batch_planner_guide.md  gui需求.md  hikyuu_faq.md  hikyuu_integration_guide.md  hikyuu_performance_analysis.md  logging_system.md  new_task_development_guide.md  pit_incremental_update_guide.md  script_example.py  script_template_guide.md  task_knowledge_reference.md  tusharedb_usage.md  user_guide.md
examples/: README_incremental_update.md  README_stock_daily_basic_full_update.md  README_stock_daily_basic_incremental_update.md  backtest_example.py  backtest_structure_demo.py  calendar_example.py  check_stock_daily_quality.py  complete_backtest_demo.py  config_usage_demo.py  enhanced_backtrader_demo.py  final_sync_backtest_demo.py  fixed_backtest_demo.py  full_market_backtest_benchmark.py  full_market_performance_test.py  ifind_api_demo.py  ifind_task_design_demo.py  multi_stock_backtest.py  optimized_full_market_backtest.py  safe_backtest_demo.py  simple_backtest.py  stock_daily_basic_full_update.py  stock_daily_basic_incremental_update.py  stock_daily_full_update.py  stock_daily_incremental_update.py  tushare_stock_adjfactor_updater.py  tushare_stock_daily_updater.py  tushare_stock_dailybasic_updater.py  update_all_tasks.py  update_all_tasks.py.bak  update_cashflow_task.py  update_express_task.py  update_fina_indicator_task.py  update_financial_tasks.py  update_forecast_task.py  update_income_task.py
fund_analysis/: __init__.py  _schema.py
fund_backtest/: __init__.py
gui/: controller.py  event_handlers.py  main_window.py
memory-bank/: activeContext.md  decisionLog.md  productContext.md  progress.md  systemPatterns.md
research/: .gitignore  MIGRATION_GUIDE.md  __init__.py  hikyuu_source_analysis.md  stock_limit_fill_up_stat_final.py  stock_limit_fill_up_stat_v2.py
scripts/: README.md  check_coverage.py  check_data_quality.py  check_db_quality.py  check_docs_links.py  check_fund_daily_by_trade_date.py  check_fund_daily_dates.py  convert_double_precision_to_numeric.py  convert_with_views_handling.py  count_python_lines.py  create_barra_partitions.py  debug_run_barra_day.py  drop_qfq_columns.py  features_init.py  features_validate_pit.py  generate_hikyuu_5min_tickers.py  import_all_hikyuu_to_ddb.ps1  initialize_barra_schema.py  initialize_materialized_views.py  migrate_existing_tables_to_rawdata.py  run_barra_batch.py  run_tinysoft_infoarray_full.py  test_data_processing_refactor.py  (+8 more)
(+1013 files in other folders)
